--- a/index.html
+++ b/index.html
@@ -1,9 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Coral Gutiérrez - Web Developer</title>
+    <!--Bootstrap v5.3 CSS-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <!--My external CSS link-->
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-12 col-lg-12">
+          <nav>
+            <a class="nav-links" href="#inicio">Inicio</a>
+            <a class="nav-links" href="#formacion">Sobre mí</a>
+            <a class="nav-links" href="#proyectos">Poyectos</a>
+            <a class="nav-links" href="contacto">Contacto</a>
+          </nav>
+        </div>
+      </div>
+      <div class="row" id="intro-container">
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <h1>Soy Coral,</h1>
+          <h1 class="intro-title">Web Developer.</h1>
+          <p class="intro-description">
+            Disfruto creando aplicaciones web intuitivas y estéticas. Me
+            apasiona el aprendizaje continuo, la diversidad cultural y los
+            avances de la IA.
+          </p>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="profile-pic-container">
+            <img
+              class="profile-pic"
+              src="img/foto-coral.png"
+              alt="Foto Coral"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="row" id="tech-container">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+          <h2 class="section-title">Formación</h2>
+          <p class="section-text">
+            Actualmente cursando mi último año del Grado Superior en Desarrollo
+            de Aplicaciones Web, con ilusión por realizar mis prácticas en una
+            empresa con enfoque internacional. Además, soy licenciada en
+            Traducción e Interpretación de inglés y alemán, y cuento con
+            experiencia trabajando en empresas multinacionales y en el
+            extranjero en diferentes sectores.
+          </p>
+        </div>
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-3">
+            <h2 class="section-title">Tecnologías</h2>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Bootstrap</li>
+              <li>JavaScript</li>
+              <li>PHP</li>
+              <li>Java</li>
+              <li>MySQL</li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3">
+            <h2 class="section-title">Herramientas</h2>
+            <ul>
+              <li>Git</li>
+              <li>GitHub</li>
+              <li>Figma</li>
+              <li>Canva</li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3">
+            <h2 class="section-title">Aptitudes</h2>
+            <ul>
+              <li>Proactividad</li>
+              <li>Trabajo en equipo</li>
+              <li>Metodología SCRUM</li>
+              <li>Motivación por aprender</li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3">
+            <h2 class="section-title">Idiomas</h2>
+            <ul>
+              <li>Inglés C2</li>
+              <li>Alemán C1</li>
+              <li>Italiano B2</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--Bootstrap v5.3 JS-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <!--Included Popper for additional functionalities-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"
+    ></script>
+    <!--My external JS link-->
+    <script src="src/javascript.js"></script>
+  </body>
 </html>
