Added new content and styling

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="col-sm-12 col-lg-12">
           <nav>
             <a class="nav-links" href="#inicio">Inicio</a>
-            <a class="nav-links" href="#formacion">Sobre mí</a>
+            <a class="nav-links" href="#sobremi">Sobre mí</a>
             <a class="nav-links" href="#proyectos">Poyectos</a>
-            <a class="nav-links" href="contacto">Contacto</a>
+            <a class="nav-links" href="#contacto">Contacto</a>
           </nav>
         </div>
       </div>
@@ -46,9 +46,10 @@
           </div>
         </div>
       </div>
-      <div class="row" id="tech-container">
+      <div class="row" id="exp-info-container">
         <div class="col-sm-12 col-md-12 col-lg-12">
-          <h2 class="section-title">Formación</h2>
+          <a name="sobremi"></a>
+          <h2 class="section-title">Sobre mí</h2>
           <p class="section-text">
             Actualmente cursando mi último año del Grado Superior en Desarrollo
             de Aplicaciones Web, con ilusión por realizar mis prácticas en una
@@ -96,6 +97,16 @@
               <li>Alemán C1</li>
               <li>Italiano B2</li>
             </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12 col-md-12 col-lg-12">
+            <a
+              class="button"
+              href="/img/cv-coral-gutierrez-sanchez.pdf"
+              target="_blank"
+              >CV COMPLETO</a
+            >
           </div>
         </div>
       </div>
