Added projects and contact sections

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </div>
         </div>
       </div>
-      <div class="row" id="exp-info-container">
+      <div class="row" id="purple-info-container">
         <div class="col-sm-12 col-md-12 col-lg-12">
           <a name="sobremi"></a>
           <h2 class="section-title">Sobre mí</h2>
@@ -99,7 +99,7 @@
             </ul>
           </div>
         </div>
-        <div class="row">
+        <div class="row" id="button-container">
           <div class="col-sm-12 col-md-12 col-lg-12">
             <a
               class="button"
@@ -110,6 +110,106 @@
           </div>
         </div>
       </div>
+      <div class="row" id="white-info-container">
+        <a name="proyectos"></a>
+        <h2 class="section-title">Proyectos</h2>
+        <div class="col-sm-12 col-md-12 col-lg-12">
+          <div class="project-container">
+            <img
+              class="project-img"
+              src="img/ritual-relax.jpg"
+              alt="proyecto_web"
+            />
+            <p class="section-text">
+              Página web estática para una práctica de la universidad siguiendo
+              un diseño responsive. Inserción de galerías de imágenes, barra de
+              navegación desplegable, audios y vídeos. Empleo de principios de
+              comunicación visual como equilibrio, compensación y peso prestando
+              también atención a elementos como iconos, colores y tipografías.
+              Tecnologías utilizadas: Bootstrap, HTML, CS y JQuey.
+            </p>
+            <div class="row" id="button-container">
+              <div class="col-sm-12 col-md-12 col-lg-12">
+                <a
+                  class="button"
+                  href="https://ritualrelax.netlify.app/"
+                  target="_blank"
+                  >VER PROYECTO</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="row" id="purple-info-container">
+          <div class="col-sm-12 col-md-12 col-lg-12">
+            <h2 class="section-title>">Contacto</h2>
+            <br />
+            <p class="contact-info">
+              <img
+                class="contact-icon"
+                src="img/phone-icon.png"
+                alt="Icono telefono"
+              />
+              (+34) 633 92 15 20
+            </p>
+            <p class="contact-info">
+              <img
+                class="contact-icon"
+                src="img/email-icon.png"
+                alt="Icono email"
+              />gsanchez.coral@gmail.com
+            </p>
+            <p class="contact-info">
+              <a
+                class="contact-links"
+                href="img/cv-coral-gutierrez-sanchez.pdf"
+                target="_blank"
+                ><img
+                  class="contact-icon"
+                  src="img/cv-icon.png"
+                  alt="Icono CV"
+                />
+                CV extendido</a
+              >
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <a name="contacto"></a>
+          <div class="col-sm-12 col-md-12 col-lg-12">
+            <div class="social-media-container">
+              <a
+                class="media-links"
+                href="https://www.linkedin.com/in/coralgutierrezsanchez/"
+              >
+                <img
+                  class="contact-icon"
+                  src="img/linkedin-icon.png"
+                  alt="Icono LinkedIn"
+                />
+              </a>
+              <a class="media-links" href="https://github.com/Coral-Gs">
+                <img
+                  class="contact-icon"
+                  src="img/github-icon.png"
+                  alt="Icono LinkedIn"
+                />
+              </a>
+              <div class="footer-line"></div>
+              <span
+                ><a
+                  class="coded-by"
+                  href="https://github.com/Coral-Gs/my_website"
+                  target="_blank"
+                  >Coded with ♥ by Coral Gutierrez</a
+                ></span
+              >
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
     <!--Bootstrap v5.3 JS-->
     <script
