Updated responsive design

--- a/index.html
+++ b/index.html
@@ -115,11 +115,13 @@
         <h2 class="section-title">Proyectos</h2>
         <div class="col-sm-12 col-md-12 col-lg-12">
           <div class="project-container">
-            <img
-              class="project-img"
-              src="img/ritual-relax.jpg"
-              alt="proyecto_web"
-            />
+            <div class="project-img-container">
+              <img
+                class="project-img"
+                src="img/ritual-relax.jpg"
+                alt="proyecto_web"
+              />
+            </div>
             <p class="section-text">
               Página web estática para una práctica de la universidad siguiendo
               un diseño responsive. Inserción de galerías de imágenes, barra de
