Updated responsive design

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               alt="Icono menu"
               onclick="toggleMenu()"
             />
-            <div id="nav-links-container">
+            <div id="nav-links-container" class="nav-links">
               <a class="nav-links" href="#inicio">Inicio</a>
               <a class="nav-links" href="#sobremi">Sobre mí</a>
               <a class="nav-links" href="#proyectos">Proyectos</a>
