--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
       <div class="row">
         <div class="col-sm-12 col-lg-12">
           <nav>
-            <img
-              class="menu-icon"
-              src="img/menu-icon.png"
-              alt="Icono menu"
-              onclick="toggleMenu()"
-            />
             <div id="nav-links-container" class="nav-links">
               <a class="nav-links" href="#inicio">Inicio</a>
               <a class="nav-links" href="#sobremi">Sobre mí</a>
@@ -193,6 +187,7 @@
               <a
                 class="media-links"
                 href="https://www.linkedin.com/in/coralgutierrezsanchez/"
+                target="_blank"
               >
                 <img
                   class="contact-icon"
@@ -200,7 +195,11 @@
                   alt="Icono LinkedIn"
                 />
               </a>
-              <a class="media-links" href="https://github.com/Coral-Gs">
+              <a
+                class="media-links"
+                href="https://github.com/Coral-Gs"
+                target="_blank"
+              >
                 <img
                   class="contact-icon"
                   src="img/github-icon.png"
