--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
           <a name="sobremi"></a>
           <h2 class="section-title">Sobre mí</h2>
           <p class="section-text">
-            Actualmente cursando mi último año del Grado Superior en Desarrollo
-            de Aplicaciones Web, con ilusión por realizar mis prácticas en una
-            empresa con enfoque internacional. Además, soy licenciada en
-            Traducción e Interpretación de inglés y alemán, y cuento con
-            experiencia trabajando en empresas multinacionales y en el
-            extranjero en diferentes sectores.
+            Actualmente estoy cursando mi último año del Grado Superior en
+            Desarrollo de Aplicaciones Web, con ilusión por realizar mis
+            prácticas y comenzar mi trayectoria en el sector IT en una empresa
+            con enfoque internacional. Soy licenciada en Traducción e
+            Interpretación de inglés y alemán, y cuento con experiencia
+            trabajando en empresas multinacionales y en el extranjero en
+            diferentes sectores.
           </p>
         </div>
         <div class="row">
@@ -71,6 +72,8 @@
               <li>JavaScript</li>
               <li>PHP</li>
               <li>Java</li>
+              <li>Python</li>
+              <li>Flask</li>
               <li>MySQL</li>
             </ul>
           </div>
@@ -115,7 +118,7 @@
       <div class="row" id="white-info-container">
         <a name="proyectos"></a>
         <h2 class="section-title">Proyectos</h2>
-        <div class="col-sm-12 col-md-12 col-lg-12">
+        <div class="col-sm-12 col-md-12 col-lg-6">
           <div class="project-container">
             <div class="project-img-container">
               <img
@@ -125,12 +128,12 @@
               />
             </div>
             <p class="section-text">
-              Página web estática para una práctica de la universidad siguiendo
-              un diseño responsive. Inserción de galerías de imágenes, barra de
-              navegación desplegable, audios y vídeos. Empleo de principios de
-              comunicación visual como equilibrio, compensación y peso prestando
-              también atención a elementos como iconos, colores y tipografías.
-              Tecnologías utilizadas: Bootstrap, HTML, CSS y JQuey.
+              Página web estática con diseño responsive. Uso de galerías de
+              imágenes dinámicas, barra de navegación desplegable e inserción de
+              audios y vídeos. Empleo de principios de comunicación visual como
+              equilibrio, compensación y peso visual, prestando también atención
+              a elementos como iconos, colores y tipografías. Tecnologías
+              utilizadas: Bootstrap, HTML, CSS y JQuey.
             </p>
             <div class="row" id="button-container">
               <div class="col-sm-12 col-md-12 col-lg-12">
@@ -140,6 +143,28 @@
                   target="_blank"
                   >VER PROYECTO</a
                 >
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6">
+          <div class="project-container">
+            <div class="project-img-container">
+              <img
+                class="project-img"
+                src="img/chatpro.jpg"
+                alt="proyecto_web"
+              />
+            </div>
+            <p class="section-text">
+              Aplicación web para practicar inglés con IA mediante un chatbot
+              que utiliza la API de GTP-3.5 Turbo de OpenIA. En proceso de
+              desarrollo para el trabajo final de CSFP. Tecnologías utilizadas:
+              HTML, CSS, Bootstrap, JavaScript, Python, Flask.
+            </p>
+            <div class="row" id="button-container">
+              <div class="col-sm-12 col-md-12 col-lg-12">
+                <a class="button">EN PROCESO</a>
               </div>
             </div>
           </div>
