--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
           <div class="col-sm-12 col-md-6 col-lg-3">
             <h2 class="section-title">Herramientas</h2>
             <ul>
+              <li>VSCode</li>
               <li>Git</li>
               <li>GitHub</li>
               <li>Figma</li>
@@ -91,7 +92,7 @@
             <ul>
               <li>Proactividad</li>
               <li>Trabajo en equipo</li>
-              <li>Metodología SCRUM</li>
+              <li>Capacidad de análisis</li>
               <li>Motivación por aprender</li>
             </ul>
           </div>
@@ -106,10 +107,7 @@
         </div>
         <div class="row" id="button-container">
           <div class="col-sm-12 col-md-12 col-lg-12">
-            <a
-              class="button"
-              href="/img/cv-coral-gutierrez-sanchez.pdf"
-              target="_blank"
+            <a class="button" href="/img/cv-coral-gutierrez.pdf" target="_blank"
               >CV COMPLETO</a
             >
           </div>
@@ -160,7 +158,7 @@
               Aplicación web para practicar inglés con IA mediante un chatbot
               que utiliza la API de GTP-3.5 Turbo de OpenIA. En proceso de
               desarrollo para el trabajo final de CSFP. Tecnologías utilizadas:
-              HTML, CSS, Bootstrap, JavaScript, Python, Flask.
+              HTML, CSS, Bootstrap, JavaScript, Python y Flask.
             </p>
             <div class="row" id="button-container">
               <div class="col-sm-12 col-md-12 col-lg-12">
@@ -193,7 +191,7 @@
               <p class="contact-info">
                 <a
                   class="contact-links"
-                  href="img/cv-coral-gutierrez-sanchez.pdf"
+                  href="img/cv-coral-gutierrez.pdf"
                   target="_blank"
                   ><img
                     class="contact-icon"
